@@ -5,6 +5,8 @@
 -- Create Date :  2021/03/29                              --
 --========================================================--
 
+if not C_EquipmentSet then return end
+
 --========================================================--
 Scorpio        "Scorpio.Secure.EquipSetHandler"      "1.0.0"
 --========================================================--
