@@ -1,3 +1,8 @@
+2021/06/30 v096
+	1. Fix the spell alert not hide.
+	2. Add support to LibHealComm-4.0, so when you install the lib, you can enjoy the incoming health in classic.
+	3. Fix action handler error for the classic version.
+
 2021/06/25 v086
 	1. The SecureActionButton System done, with the reactive style system.
 
